force-app/main/default/objects/Budget_KPP__c/Budget_KPP__c.object-meta.xml
<CustomObject>
    <description>KPP Budgeting</description>
    <label>Budget KPP</label>
    <nameField>
        <label>Budget KPP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget_KPP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>