force-app/main/default/objects/Budget_KPP__c/fields/Base_Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Base_Oil_Gallons__c</fullName>
    <label>Base Oil Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>