force-app/main/default/objects/Budget_KPP__c/fields/Base_Oil_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Base_Oil_Percentage__c</fullName>
    <description>Will be in decimal equivalent not formatted as percentage ie 0.25000 instead of  25%</description>
    <label>Base Oil Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>