force-app/main/default/objects/Budget_KPP__c/fields/Branch_Account__c.field-meta.xml
<CustomField>
    <fullName>Branch_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget_KPP</relationshipLabel>
    <relationshipName>Budget_KPP</relationshipName>
    <type>Lookup</type>
</CustomField>