force-app/main/default/objects/Budget_KPP__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <description>Truncated from Brand Description for ease of filtering ( a controlled list validated by DimBrands)</description>
    <label>Brand Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>