force-app/main/default/objects/Budget_KPP__c/fields/Brand_Description__c.field-meta.xml
<CustomField>
    <fullName>Brand_Description__c</fullName>
    <description>Brand description for the item - appears customer specific</description>
    <label>Brand Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>