force-app/main/default/objects/Budget_KPP__c/fields/Call_Sheet_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Sheet_Type__c</fullName>
    <description>Indicates Direct Sale, A/R Credit or Buy Back</description>
    <label>Call Sheet Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>