force-app/main/default/objects/Budget_KPP__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget_KPP (Customer Account)</relationshipLabel>
    <relationshipName>Budget_KPP3</relationshipName>
    <type>Lookup</type>
</CustomField>