force-app/main/default/objects/Budget_KPP__c/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <formula>text(Customer_Account__r.Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Class</label>
    <type>Text</type>
</CustomField>