force-app/main/default/objects/Budget_KPP__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>