force-app/main/default/objects/Budget_KPP__c/fields/Family_Description__c.field-meta.xml
<CustomField>
    <fullName>Family_Description__c</fullName>
    <description>Added for normalization and user benefit as well as reporting</description>
    <label>Family Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>