force-app/main/default/objects/Budget_KPP__c/fields/FSC_Bundled__c.field-meta.xml
<CustomField>
    <fullName>FSC_Bundled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Y or N if fuel surcharge rate is bundled into selling price</description>
    <label>FSC Bundled</label>
    <type>Checkbox</type>
</CustomField>