force-app/main/default/objects/Budget_KPP__c/fields/FSC_Cost__c.field-meta.xml
<CustomField>
    <fullName>FSC_Cost__c</fullName>
    <label>FSC Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>