force-app/main/default/objects/Budget_KPP__c/fields/FSC_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>FSC_Sales_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Trans costing</description>
    <label>FSC Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>