force-app/main/default/objects/Budget_KPP__c/fields/Gross_Unit_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Unit_Revenue__c</fullName>
    <description>unit invoice selling price (may include trans if bundle = Y)</description>
    <label>Gross Unit Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>