force-app/main/default/objects/Budget_KPP__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <formula>text(Customer_Account__r.Industry_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Vertical</label>
    <type>Text</type>
</CustomField>