force-app/main/default/objects/Budget_KPP__c/fields/Item_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Product_Cost__c</fullName>
    <label>Item Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>