force-app/main/default/objects/Budget_KPP__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Used for transaction testing and question validations</description>
    <label>Job Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>