force-app/main/default/objects/Budget_KPP__c/fields/Key_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Name__c</fullName>
    <formula>Customer_Account__r.Key_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Name</label>
    <type>Text</type>
</CustomField>