force-app/main/default/objects/Budget_KPP__c/fields/KPP_Budget_Group__c.field-meta.xml
<CustomField>
    <fullName>KPP_Budget_Group__c</fullName>
    <description>Eco Power &amp; Non Eco Power Bulk and Packaged</description>
    <label>KPP Budget Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eco Power</fullName>
            </value>
            <value>
                <fullName>Non Eco Power Bulk and Packaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>