force-app/main/default/objects/Budget_KPP__c/fields/KPP_Director__c.field-meta.xml
<CustomField>
    <fullName>KPP_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP</relationshipName>
    <type>Lookup</type>
</CustomField>