force-app/main/default/objects/Budget_KPP__c/fields/KPP_EVP__c.field-meta.xml
<CustomField>
    <fullName>KPP_EVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP EVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP1</relationshipName>
    <type>Lookup</type>
</CustomField>