force-app/main/default/objects/Budget_KPP__c/fields/KPP_Operations_VP__c.field-meta.xml
<CustomField>
    <fullName>KPP_Operations_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP Operations VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP4</relationshipName>
    <type>Lookup</type>
</CustomField>