force-app/main/default/objects/Budget_KPP__c/fields/KPP_President__c.field-meta.xml
<CustomField>
    <fullName>KPP_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP3</relationshipName>
    <type>Lookup</type>
</CustomField>