force-app/main/default/objects/Budget_KPP__c/fields/KPP_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>KPP_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP5</relationshipName>
    <type>Lookup</type>
</CustomField>