force-app/main/default/objects/Budget_KPP__c/fields/KPP_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>KPP_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPP Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP6</relationshipName>
    <type>Lookup</type>
</CustomField>