force-app/main/default/objects/Budget_KPP__c/fields/KPP_Sales_SVP__c.field-meta.xml
<CustomField>
    <fullName>KPP_Sales_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP Sales SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP7</relationshipName>
    <type>Lookup</type>
</CustomField>