force-app/main/default/objects/Budget_KPP__c/fields/KPP_Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>KPP_Sales_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2017 KPP Sales VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP8</relationshipName>
    <type>Lookup</type>
</CustomField>