force-app/main/default/objects/Budget_KPP__c/fields/Oil_Plus__c.field-meta.xml
<CustomField>
    <fullName>Oil_Plus__c</fullName>
    <label>Oil Plus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>