force-app/main/default/objects/Budget_KPP__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product component code item id</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>