force-app/main/default/objects/Budget_KPP__c/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>System reported cost at time of transaction</description>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>