force-app/main/default/objects/Budget_KPP__c/fields/Product_Cost_Extended__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Extended__c</fullName>
    <label>Product Cost Extended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>