force-app/main/default/objects/Budget_KPP__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Product description for item</description>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>