force-app/main/default/objects/Budget_KPP__c/fields/Product_Margin_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Product_Margin_Dollars__c</fullName>
    <label>Product Margin Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>