force-app/main/default/objects/Budget_KPP__c/fields/Product_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Price__c</fullName>
    <description>FOB Sales Price of the product with no trans</description>
    <label>Product Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>