force-app/main/default/objects/Budget_KPP__c/fields/Product_Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Standard_Cost__c</fullName>
    <description>Added to handle items with incorrect costs form lube report</description>
    <label>Product Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>