force-app/main/default/objects/Budget_KPP__c/fields/Reporting_Chain_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Chain_Code__c</fullName>
    <formula>Customer_Account__r.Chain_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Chain Code</label>
    <type>Text</type>
</CustomField>