force-app/main/default/objects/Budget_KPP__c/fields/Reporting_Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Chain_Name__c</fullName>
    <formula>Customer_Account__r.Chain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Chain Name</label>
    <type>Text</type>
</CustomField>