force-app/main/default/objects/Budget_KPP__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <label>Sales Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>