force-app/main/default/objects/Budget_KPP__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>Sales Order Number of the transaction duplicates</description>
    <label>Sales Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>