force-app/main/default/objects/Budget_KPP__c/fields/Sales_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Sub_Segment__c</fullName>
    <label>Sales Sub Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>