force-app/main/default/objects/Budget_KPP__c/fields/Ship_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget_KPP (Ship_From)</relationshipLabel>
    <relationshipName>Budget_KPP1</relationshipName>
    <type>Lookup</type>
</CustomField>