force-app/main/default/objects/Budget_KPP__c/fields/Ship_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Name__c</fullName>
    <formula>Ship_From_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship From Name</label>
    <type>Text</type>
</CustomField>