force-app/main/default/objects/Budget_KPP__c/fields/Ship_Month__c.field-meta.xml
<CustomField>
    <fullName>Ship_Month__c</fullName>
    <formula>month(Ship_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>