force-app/main/default/objects/Budget_KPP__c/fields/Ship_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Ship_Quarter__c</fullName>
    <description>1Q 2Q 3Q or 4Q</description>
    <label>Ship Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q</fullName>
            </value>
            <value>
                <fullName>2Q</fullName>
            </value>
            <value>
                <fullName>3Q</fullName>
            </value>
            <value>
                <fullName>4Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>