force-app/main/default/objects/Budget_KPP__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget_KPP (Ship To Account)</relationshipLabel>
    <relationshipName>Budget_KPP2</relationshipName>
    <type>Lookup</type>
</CustomField>