force-app/main/default/objects/Budget_KPP__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>Ship_To_Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>