force-app/main/default/objects/Budget_KPP__c/fields/Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State__c</fullName>
    <formula>Ship_To_Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To State</label>
    <type>Text</type>
</CustomField>