force-app/main/default/objects/Budget_KPP__c/fields/Ship_To_Zip__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip__c</fullName>
    <formula>Ship_To_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Zip</label>
    <type>Text</type>
</CustomField>