force-app/main/default/objects/Budget_KPP__c/fields/Ship_Year__c.field-meta.xml
<CustomField>
    <fullName>Ship_Year__c</fullName>
    <formula>Year( Ship_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>