force-app/main/default/objects/Budget_KPP__c/fields/Sub_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Sub_Line_of_Business__c</fullName>
    <label>Sub Line of Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>