force-app/main/default/objects/Budget_KPP__c/fields/Trans_Bundled__c.field-meta.xml
<CustomField>
    <fullName>Trans_Bundled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Y or N if transportation is bundled into selling price</description>
    <label>Trans Bundled</label>
    <type>Checkbox</type>
</CustomField>