force-app/main/default/objects/Budget_KPP__c/fields/Trans_Cost__c.field-meta.xml
<CustomField>
    <fullName>Trans_Cost__c</fullName>
    <label>Trans Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>