force-app/main/default/objects/Budget_KPP__c/fields/Trans_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Trans_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This transaction contains invalid information and can be filtered out of the view until updated</description>
    <label>Trans Invalid</label>
    <type>Checkbox</type>
</CustomField>