force-app/main/default/objects/Budget_KPP__c/fields/Trans_Manager__c.field-meta.xml
<CustomField>
    <fullName>Trans_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trans Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP11</relationshipName>
    <type>Lookup</type>
</CustomField>