force-app/main/default/objects/Budget_KPP__c/fields/Trans_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Trans_Manager_Name__c</fullName>
    <formula>Trans_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trans Manager Name</label>
    <type>Text</type>
</CustomField>