force-app/main/default/objects/Budget_KPP__c/fields/Trans_Method__c.field-meta.xml
<CustomField>
    <fullName>Trans_Method__c</fullName>
    <label>Trans Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>