force-app/main/default/objects/Budget_KPP__c/fields/Trans_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Trans_Provided_By__c</fullName>
    <label>Trans Provided By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>