force-app/main/default/objects/Budget_KPP__c/fields/Trans_Rep__c.field-meta.xml
<CustomField>
    <fullName>Trans_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trans Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_KPP9</relationshipName>
    <type>Lookup</type>
</CustomField>