force-app/main/default/objects/Budget_KPP__c/fields/Trans_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Trans_Rep_Name__c</fullName>
    <formula>Trans_Rep__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trans Rep Name</label>
    <type>Text</type>
</CustomField>