force-app/main/default/objects/Budget_KPP__c/fields/Trans_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Trans_Sales_Price__c</fullName>
    <label>Trans Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>