force-app/main/default/objects/Budget_KPP__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of measure ID ( a controlled list validated by DimUOM)</description>
    <label>UOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>