force-app/main/default/objects/Budget_KPP__c/fields/UOM_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion_Factor__c</fullName>
    <label>UOM Conversion Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>