force-app/main/default/objects/Budget_KPP__c/recordTypes/KPP_Actual.recordType-meta.xml
<RecordType>
    <fullName>KPP_Actual</fullName>
    <active>true</active>
    <label>KPP Actual</label>
</RecordType>