force-app/main/default/objects/Budget_KPP__c/recordTypes/KPP_Budget.recordType-meta.xml
<RecordType>
    <fullName>KPP_Budget</fullName>
    <active>true</active>
    <label>KPP Budget</label>
</RecordType>