force-app/main/default/objects/Budget_KPP__c/recordTypes/KPP_Forecast.recordType-meta.xml
<RecordType>
    <fullName>KPP_Forecast</fullName>
    <active>true</active>
    <label>KPP Forecast</label>
</RecordType>