force-app/main/default/objects/Budget_KPP__c/recordTypes/KPP_Market.recordType-meta.xml
<RecordType>
    <fullName>KPP_Market</fullName>
    <active>true</active>
    <label>KPP Market</label>
</RecordType>