force-app/main/default/objects/Budget_KPP__c/recordTypes/KPP_Order.recordType-meta.xml
<RecordType>
    <fullName>KPP_Order</fullName>
    <active>true</active>
    <label>KPP Order</label>
</RecordType>